TG-34 Create version
Add apis to create new versions, either by push token or by zitadel auth
