# angular/projects/api/src/lib/models/create-token.ts
@@ -2,5 +2,4 @@
 /* eslint-disable */
 export interface CreateToken {
   allowedApps?: Array<string>;
-  allowedTracks?: Array<string>;
 }
