# angular/projects/api/src/lib/models/push-token.ts
@@ -2,7 +2,6 @@
 /* eslint-disable */
 export interface PushToken {
   allowedApps?: Array<string>;
-  allowedTracks?: Array<string>;
   id?: string;
   token: string;
 }
