# angular/projects/api/src/lib/models/update-token.ts
@@ -2,5 +2,4 @@
 /* eslint-disable */
 export interface UpdateToken {
   allowedApps?: Array<string>;
-  allowedTracks?: Array<string>;
 }
